# dev_bms

./: .cproject  .mxproject  .project  BMS.dbc  CMakeLists.txt  NLG5.dbc  NLG5_BRUSA.dbc  README.md  dev_bms Debug.cfg  dev_bms Debug.launch  dev_bms Release.launch  dev_bms.ioc  mx.scratch  test.dbc
Core/Inc/: LTC681x.h  calculations.h  can.h  conf.h  isoSpi.h  main.h  operation.h  pwm.h  stm32g4xx_hal_conf.h  stm32g4xx_it.h  temp_calc.h
Core/Src/: LTC681x.c  calculations.c  can.c  isoSpi.c  main.c  operation.c  pwm.c  stm32g4xx_hal_msp.c  stm32g4xx_it.c  temp_calc.c
DBC/: NLG5.dbc  NLG5_BRUSA.html
Debug/: dev_bms.elf  dev_bms.list  dev_bms.map  makefile  objects.list
Debug/Core/Src/: LTC681x.cyclo  LTC681x.d  LTC681x.su  calculations.cyclo  calculations.d  calculations.su  can.cyclo  can.d  can.su  isoSpi.cyclo  isoSpi.d  isoSpi.su  main.cyclo  main.d  main.su  operation.cyclo  operation.d  operation.su  pwm.cyclo  pwm.d  pwm.su  stm32g4xx_hal_msp.cyclo  stm32g4xx_hal_msp.d  stm32g4xx_hal_msp.su  stm32g4xx_it.cyclo  stm32g4xx_it.d  stm32g4xx_it.su  subdir.mk  system_stm32g4xx.d  temp_calc.cyclo  temp_calc.d  temp_calc.su
Debug/Drivers/STM32G4xx_HAL_Driver/Src/: stm32g4xx_hal.d  (+27 more)
Release/: dev_bms.elf  dev_bms.list  dev_bms.map  makefile  objects.list
Release/Core/Src/: LTC681x.d  LTC681x.su  calculations.d  calculations.su  can.d  can.su  isoSpi.su  main.d  main.su  operation.d  operation.su  pwm.su  stm32g4xx_hal_msp.su  stm32g4xx_it.d  subdir.mk  system_stm32g4xx.d  temp_calc.d  temp_calc.su
Release/Core/Startup/: subdir.mk
cmake/: st-project.cmake
(+10 files in other folders)
